--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "bootstrap": "^4.6.0",
+    "bootswatch": "^4.6.0",
+    "css-loader": "^5.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "style-loader": "^2.0.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
